# neoco

./: CHANGELOG.md  Cargo.toml  clippy.toml  deny.toml  release-plz.toml  rustfmt.toml
.github/workflows/: release-plz.yml  rust.yml
.neoco/: neoco.toml
core/: Cargo.toml
crates/agent/: CHANGELOG.md  Cargo.toml
crates/agent/src/: chat.rs  lib.rs  state.rs
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: lib.rs  render.rs
crates/config/: CHANGELOG.md  Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs  renderer.rs  tools.rs
crates/errors/: Cargo.toml
crates/errors/src/: chat.rs  event.rs  io.rs  lib.rs
crates/event/: Cargo.toml
crates/event/src/: event.rs  event_bus.rs  lib.rs  message.rs
crates/tools/: CHANGELOG.md  Cargo.toml
crates/tools/src/: bash.rs  lib.rs  shell.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  event.rs  event_stream.rs  frame_rate_limiter.rs  frame_requester.rs  lib.rs  state.rs  tui.rs  widget.rs
crates/tui/src/widget/: chat.rs  highlight.rs  input.rs
crates/types/: CHANGELOG.md  Cargo.toml
crates/types/src/: events.rs  lib.rs
docs/superpowers/plans/: 2025-03-18-bash-sandbox.md
progress/: REQUIREMENT.md  TECH-AGENT.md  TECH-Agent.md  TECH-CONFIG.md  TECH-CONTEXT.md  TECH-Concurrency.md  TECH-MCP.md  TECH-MODEL.md  TECH-Model.md  TECH-PROMPT.md  TECH-SESSION.md  TECH-SKILL.md  TECH-Session.md  TECH-TOOL.md  TECH-UI.md  TECH-WORKFLOW.md  TECH-Workflow.md  TECH.md
src/: agent.rs  agent_tree.rs  config.rs  errors.rs  events.rs  lib.rs  main.rs  output.rs  render.rs  renderer.rs  sandbox.rs  tools.rs
src/renderer/: cli.rs  tui.rs
src/sandbox/: error.rs  fs.rs
src/tools/sandbox/: config.rs  mod.rs  network.rs  whitelist.rs
tests/: sandbox_test.rs
