# Root Package Config
[package]
name = "neoco"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["MiyakoMeow"]

[[bin]]
name = "neoco"
path = "bin/neoco.rs"

[dependencies]
rig-core = "0.32"
clap = { version = "4", features = ["derive"] }
toml = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stream = "0.3"
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"

[profile.release]
lto = "thin"
strip = true

[lints.rust]
missing_docs = "warn"
dead_code = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"
private_doc_tests = "warn"
invalid_html_tags = "warn"
bare_urls = "warn"

[lints.clippy]
pedantic = "warn"
print_stdout = "warn"
print_stderr = "warn"
must_use_candidate = "warn"
mod_module_files = "warn"
unwrap_used = "warn"
indexing_slicing = "warn"
