[workspace]
members = ["crates/core", "crates/cli", "crates/tui"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["MiyakoMeow"]

[workspace.dependencies]
# rig-core相关
rig-core = "0.32"

# 工具库
clap = { version = "4", features = ["derive"] }
toml = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# 异步运行时
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
futures = "0.3"
async-stream = "0.3"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI相关
ratatui = "0.29"
crossterm = "0.28"

# 时间处理
chrono = "0.4"

# 内部依赖
neoco-core = { path = "crates/core" }
neoco-cli = { path = "crates/cli" }
neoco-tui = { path = "crates/tui" }

[workspace.lints.rust]
missing_docs = "warn"
dead_code = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
private_doc_tests = "warn"
invalid_html_tags = "warn"
bare_urls = "warn"

[workspace.lints.clippy]
pedantic = "warn"
print_stdout = "warn"
print_stderr = "warn"
must_use_candidate = "warn"
mod_module_files = "warn"
unwrap_used = "warn"
indexing_slicing = "warn"

# ========== 根包配置（用于bin/neoco.rs）==========
[package]
name = "neoco"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "neoco"
path = "bin/neoco.rs"

[dependencies]
neoco-core = { workspace = true }
neoco-cli = { workspace = true }
neoco-tui = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[profile.release]
lto = "thin"
strip = true
