[package]
name = "neoco"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["MiyakoMeow"]

[[bin]]
name = "neoco"
path = "src/main.rs"

[dependencies]
neoco-config.workspace = true
neoco-tools.workspace = true
neoco-agent.workspace = true
neoco-cli.workspace = true
neoco-tui.workspace = true
neoco-event.workspace = true
neoco-errors.workspace = true
clap.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true

[lints]
workspace = true

[workspace]
members = ["crates/config", "crates/tools", "crates/agent", "crates/cli", "crates/tui", "crates/event", "crates/errors"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["MiyakoMeow"]

[workspace.dependencies]
neoco-config = { path = "crates/config" }
neoco-tools = { path = "crates/tools" }
neoco-agent = { path = "crates/agent" }
neoco-cli = { path = "crates/cli" }
neoco-tui = { path = "crates/tui" }
neoco-event = { path = "crates/event" }
neoco-errors = { path = "crates/errors" }
rig-core = "0.32"
clap = { version = "4", features = ["derive"] }
toml = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
tokio-stream = { version = "0.1", features = ["sync"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stream = "0.3"

[profile.release]
lto = "thin"
strip = true

[workspace.lints.rust]
missing_docs = "warn"
dead_code = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
private_doc_tests = "warn"
invalid_html_tags = "warn"
bare_urls = "warn"

[workspace.lints.clippy]
pedantic = "warn"
print_stdout = "warn"
print_stderr = "warn"
must_use_candidate = "warn"
mod_module_files = "warn"
unwrap_used = "warn"
indexing_slicing = "warn"
