[package]
name = "neoco-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
neoco-config.workspace = true
neoco-types.workspace = true
neoco-tools.workspace = true
rig-core.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
async-stream.workspace = true
