[package]
name = "neoco-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
name = "neoco_cli"
path = "src/lib.rs"

[dependencies]
neoco-agent.workspace = true
neoco-event.workspace = true
neoco-errors.workspace = true
serde_json.workspace = true
tracing.workspace = true
