[package]
name = "neoco-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rig-core = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
