[package]
name = "neoco-event"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
name = "neoco_event"
path = "src/lib.rs"

[dependencies]
rig-core.workspace = true
serde.workspace = true
serde_json.workspace = true
crossterm.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
